added mata to head tag

--- a/page.html
+++ b/page.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 
 <HTML>
-<HEAD>
 
-</HEAD>
+	<HEAD>
+		<meta charset="utf-8"  />
+		<meta name="Author" content="Karine">
+		<meta name="Description" content="A simple html page to test head tG">
+		
+		<title>
+			Page
+		</title>
 
-<BODY>
+	</HEAD>
 
-Hello!
-</BODY>
+	<BODY>
+
+		Hello!
+	</BODY>
 
 
 
