worked on header

--- a/page.html
+++ b/page.html
@@ -10,7 +10,14 @@
 		<title>
 			Page
 		</title>
+		
+		<script type="text/javascript">
+			window.onload = function() { alert('hello');}
+		</script>
 
+		<style type="text/css">
+			body {color:red;}
+		</style>
 	</HEAD>
 
 	<BODY>
