--- a/page.html
+++ b/page.html
@@ -12,17 +12,23 @@
 		</title>
 		
 		<script type="text/javascript">
-			window.onload = function() { alert('hello');}
+			//window.onload = function() { alert('hello');}
 		</script>
 
 		<style type="text/css">
 			body {color:red;}
+			.paragraphe {color:blue}
 		</style>
 	</HEAD>
 
 	<BODY>
-
-		Hello!
+		
+		<p class="paragraphe">Bleu!</p>
+		<p>Rouge!</p>
+		<ul>
+			<li>Un</li>
+			<li>Deux</li>
+		</ul>
 	</BODY>
 
 
