finished working with lists

--- a/page.html
+++ b/page.html
@@ -29,6 +29,16 @@
 			<li>Un</li>
 			<li>Deux</li>
 		</ul>
+		
+		<ol>
+			<li>Un</li>
+				<ul>
+					<li>Un</li>
+					<li>Deux</li>		
+				</ul>
+			<li>Deux</li>			
+			<li>Trois</li>			
+		</ol>
 	</BODY>
 
 
